aggiunta funzionalita di cascade nel lato persistenza demo e separazaione dei bean credenziali login e registrazione in email bean e password bean